Allow events to be removed from the current time executing events.